kustomize-test/overlays/cloudzcp-pog-dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  rules:
  - host: pog-dev-monitoring.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
  - host: pog-dev-prometheus.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
  - host: pog-dev-alertmanager.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-service
          servicePort: 9093
  tls:
  - secretName: cloudzcp-io-cert
    hosts:
    - pog-dev-monitoring.cloudzcp.io
    - pog-dev-prometheus.cloudzcp.io
    - pog-dev-alertmanager.cloudzcp.io
